responsive ok centré ok reste animations et traits bords h3 menus

--- a/chic.html
+++ b/chic.html
@@ -11,7 +11,9 @@
     <body>
         <header>  
             <h1>
-                ohmyfood
+                <a href="index.html">
+                    ohmyfood
+                </a>
             </h1>            
         </header>
         <main>
@@ -29,55 +31,63 @@
                         <h3>
                             Pour se mettre en appétit
                         </h3>
-                            <span class="plat">
+                            <div class="plat">
+                                <p>
                                 Tartare de poulpe acidulé aux zests d’orange
-                            </span>
-                            <span class="prix">
-                                    79€
-                            </span>
-                            <br><span class="plat">
-                                Velouté de légumes d’antan
-                            </span>
-                            <span class="prix">
-                                57€
-                            </span>
-                            <br><span class="plat">
-                                Soupe à l’oignon revisitée
-                            </span>
-                            <span class="prix">
-                                57€
-                            </span>
+                                    <span class="prix">
+                                            79€
+                                    </span>
+                                </p>
+                                <p>
+                                    Velouté de légumes d’antan
+                                        <span class="prix">
+                                            57€
+                                        </span>
+                                </p>
+                                <p>
+                                    Soupe à l’oignon revisitée
+                                        <span class="prix">
+                                            57€
+                                        </span>
+                                </p>
+                            </div>
                     </div>
                     <div class="police2">
                         <h3>
                             Plaisir des papilles
                         </h3>
-                            <span class="plat">
-                                Coquilles Saint-Jacques accompagnées d’une purée de panais
-                            </span>        
-                            <span class="prix">
-                                95€
-                            </span>
-                            <br><span class="plat">
+                            <p>
+                                Coquilles Saint-Jacques accompagnées d’une purée de panais  
+                                    <span class="prix">
+                                        95€
+                                    </span>
+                            </p>
+                            <p>
                                 Magret de canard et parmentier de pommes de terre 
-                            </span>
-                            <span class="prix">
-                                88€
-                            </span>
-                            <br><span class="plat">
+                                    <span class="prix">
+                                        88€
+                                    </span>
+                            </p>
+                            <p>
                                 Pigeonneau d’Ille et Vilaine sur son lit de gnocchis aux légumes
-                            </span>
-                            <span class="prix">
-                                175€
-                            </span>
+                                    <span class="prix">
+                                        175€
+                                    </span>
+                            </p>
                     </div>
                     <div class="police3">
                         <h3>
                             Gourmandises sucrées
                         </h3>
-                            Pétales de violette glacés et purée de noisettes
-                            <br>Fondant au chocolat revisité
-                            <br>Millefeuille croustillant 
+                            <p>
+                                Pétales de violette glacés et purée de noisettes
+                            </p>
+                            <p>
+                                Fondant au chocolat revisité
+                            </p>
+                            <p>
+                                Millefeuille croustillant
+                            </p> 
                     </div>
                 </section>
             </div>
