--- a/delice.html
+++ b/delice.html
@@ -5,13 +5,16 @@
         <title>Ohmyfood - Le délice des papilles</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="styledelice.css"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
             <h1>
-                ohmyfood
+                <a href="index.html">
+                    ohmyfood
+                </a>
             </h1>            
         </header>
         <main>
@@ -28,49 +31,73 @@
                     <h3>
                         Pour bien commencer 
                     </h3>
-                        <br>Tartare de thon assaisonné au yuzu
-                            <span class="prix">
-                                55€
-                            </span>
-                        <br>Bouchée de homard croustillant et sa farandole de petits légumes
-                            <span class="prix">
-                                89€
-                            </span>
-                        <br>Velouté de cèpes aux truffes
-                            <span class="prix">
-                                56€
-                            </span>
+                        <div class="plat">
+                            <p>
+                                Tartare de thon assaisonné au yuzu
+                                    <span class="prix">
+                                        55€
+                                    </span>
+                            </p>
+                            <p>
+                                Bouchée de homard croustillant et sa farandole de petits légumes
+                                    <span class="prix">
+                                        89€
+                                    </span>
+                            </p>
+                            <p>
+                                Velouté de cèpes aux truffes
+                                    <span class="prix">
+                                        56€
+                                    </span>
+                            </p>
+                        </div>
                     <h3>
                         Pour bien continuer
                     </h3>
-                        <br>Poulet rôti aux herbes de provence et sa crème de truffe
-                            <span class="prix">
-                                110€
-                            </span>
-                        <br>Langouste rôtie et ses légumes de saison
-                            <span class="prix">
-                                225€
-                            </span>
-                        <br>Côte de boeuf angus et sa purée de panais
-                            <span class="prix">
-                                115€
-                            </span>
+                        <div class="plat">
+                            <p>
+                                Poulet rôti aux herbes de provence et sa crème de truffe
+                                    <span class="prix">
+                                        110€
+                                    </span>
+                            </p>
+                            <p>
+                                Langouste rôtie et ses légumes de saison
+                                    <span class="prix">
+                                        225€
+                                    </span>
+                            </p>
+                            <p>
+                                Côte de boeuf angus et sa purée de panais
+                                    <span class="prix">
+                                        115€
+                                    </span>
+                            </p>
+                        </div>
                     <h3>
                         Pour bien terminer 
                     </h3>
-                        <br>Farandole de desserts du chef
-                            <span class="prix">
-                                55€
-                            </span>
-                        <br>Crème brulée revisitée
-                            <span class="prix">
-                                60€
-                            </span>
-                        <br>Tiramisu à la noisette
-                            <span class="prix">
-                                55€
-                            </span>  
-                    </section>  
+                        <div class="plat">
+                            <p>
+                                Farandole de desserts du chef
+                                    <span class="prix">
+                                        55€
+                                    </span>
+                            </p>
+                            <p>
+                                Crème brulée revisitée
+                                    <span class="prix">
+                                        60€
+                                    </span>
+                            </p>
+                            <p>
+                                Tiramisu à la noisette
+                                    <span class="prix">
+                                        55€
+                                    </span>  
+                            </p>
+                        </div>
+                </section>  
             </div>    
         </main>
         <footer>
