--- a/palette.html
+++ b/palette.html
@@ -5,13 +5,16 @@
         <title>Ohmyfood - La palette du goût</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylepalette.css"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
 <body>
     <header>  
         <h1>
-            ohmyfood
+            <a href="index.html">
+                ohmyfood
+            </a>
         </h1>            
     </header>
     <main>
@@ -28,46 +31,72 @@
                 <h3>
                     Esquisse
                 </h3>
-                    <br>Fricassée d’escargot au piment d’espelette
-                        <span class="prix">
-                            60€
-                        </span>
-                    <br>Oeuf au plat assaisonné à la truffe sur lit de caviar
-                        <span class="prix">
-                            55€
-                        </span>
-                    <br>Foie gras de canard mi-cuit et ses copeaux de truffe noire
-                        <span class="prix">
-                            65€
-                        </span>
-                <h3>Oeuvre de maître</h3>
-                    <br>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
-                        <span class="prix">
-                            70€
-                        </span>
-                    <br>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais
-                        <span class="prix">
-                            85€
-                        </span>
-                    <br>Filet de Turbot aux agrumes 
-                        <span class="prix">
-                            125€
-                        </span>
+                    <div class="plat">
+                        <p>
+                            Fricassée d’escargot au piment d’espelette
+                                <span class="prix">
+                                    60€
+                                </span>
+                        </p>
+                        <p>
+                            Oeuf au plat assaisonné à la truffe sur lit de caviar
+                                <span class="prix">
+                                    55€
+                                </span>
+                        </p>                
+                        <p>
+                            Foie gras de canard mi-cuit et ses copeaux de truffe noire
+                                <span class="prix">
+                                    65€
+                                </span>
+                        </p>
+                    </div>
+                <h3>
+                    Oeuvre de maître
+                </h3>
+                    <div class="plat">
+                        <p>
+                            Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
+                                <span class="prix">
+                                    70€
+                                </span>
+                        </p>
+                        <p>
+                            Parmentier de queue de boeuf à la truffe noire sur sa purée de panais
+                                <span class="prix">
+                                    85€
+                                </span>
+                        </p>
+                        <p>
+                            Filet de Turbot aux agrumes 
+                                <span class="prix">
+                                    125€
+                                </span>
+                        </p>
+                    </div>
                 <h3>
                     Au sommet de l’art
                 </h3>
-                    <br>Paris-Brest revisité
-                        <span class="prix">
-                            55€
-                        </span>
-                    <br>Macaron au chocolat d’exception et glace à la vanille de Madagascar 
-                        <span class="prix">
-                            65€
-                        </span>
-                    <br>Mousse au chocolat au piment d’espelette et à la truffe noire
-                        <span class="prix">
-                            60€
-                        </span>
+                    <div class="plat">
+                        <p>
+                            Paris-Brest revisité
+                                <span class="prix">
+                                    55€
+                                </span>
+                        </p>
+                        <p>
+                            Macaron au chocolat d’exception et glace à la vanille de Madagascar 
+                                <span class="prix">
+                                    65€
+                                </span>
+                        </p>
+                        <p>
+                            Mousse au chocolat au piment d’espelette et à la truffe noire
+                                <span class="prix">
+                                    60€
+                                </span>
+                        </p> 
+                    </div>       
             </section>
         </div>
     </main>
