--- a/index.html
+++ b/index.html
@@ -4,60 +4,72 @@
         <meta charset="utf-8"/>
         <title>Ohmyfood</title>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">       
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
             <h1>
-                ohmyfood
+                <a href="index.html">
+                    ohmyfood
+                </a>
             </h1>            
         </header>
         <main>
-            <div class="ligne1">
+            <div class="ligne">
                 <section class="note">
-                    <a href="note.html">
-                        <i class="fas fa-music fa-2x">
-                        </i>
-                        <h5>
-                            La note enchantée
-                        </h5>
-                        <h4>
-                            MENU
-                        </h4>
-                    </a>
+                    <div class="zoom">
+                        <a href="note.html">
+                            <i class="fas fa-music fa-3x">
+                            </i>
+                            <h5>
+                                La note enchantée
+                            </h5>
+                            <h4>
+                                MENU
+                            </h4>
+                        </a>
+                    </div>
+                    </section>
                 </section>
                 <section class="chic">
-                    <a href="chic.html">
-                        <h5>
-                            Le chic à la française
-                        </h5>
-                        <h4>
-                            Menu
-                        </h4>
-                    </a>
+                    <div class="zoom">
+                        <a href="chic.html">
+                            <h5>
+                                Le chic à la française
+                            </h5>
+                            <h4>
+                                Menu
+                            </h4>
+                        </a>
+                    </div>
                 </section>
             </div>
-            <div class="ligne2">    
+            <div class="ligne">    
                 <section class="delice">
-                    <a href="delice.html">
-                        <h5>
-                            Le délice des papilles
-                        </h5>
-                        <h4>
-                            Menu
-                        </h4>
-                    </a>
+                    <div class="zoom">
+                        <a href="delice.html">
+                            <h5>
+                                Le délice des papilles
+                            </h5>
+                            <h4>
+                                Menu
+                            </h4>
+                        </a>
+                    </div>
                 </section>
                 <section class="palette">
-                    <a href="palette.html">
-                        <h5>
-                            La palette du goût
-                        </h5>
-                        <h4>
-                            Menu
-                        </h4>
-                    </a>
+                    <div class="zoom">
+                        <a href="palette.html">
+                            <h5>
+                                La palette du goût
+                            </h5>
+                            <h4>
+                                Menu
+                            </h4>
+                        </a>
+                    </div>
                 </section>
             </div>
             <div class="ligne3">
