--- a/note.html
+++ b/note.html
@@ -5,6 +5,7 @@
         <title>Ohmyfood - La Note Enchantée</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylenote.css"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
         
@@ -13,7 +14,9 @@
     <body>
         <header>  
             <h1>
-                ohmyfood
+                <a href="index.html">
+                    ohmyfood
+                </a>
             </h1>            
         </header>
         <main>
@@ -29,53 +32,77 @@
                     </h5>
                 </section>
                 <section class="menu1s">
-                <h3>
-                    Prélude
-                </h3>
-                    <br><span class="plat">
-                            Ravioles de foie gras accompagnés de leur crème à la truffe
-                        </span>
-                        <span class="prix">
-                            98€
-                        </span>
-                    <br>Caviar osciètre sur blini à la farine de blé noir
-                        <span class="prix">
-                            115€
-                        </span>
-                    <br>Homard et espuma de potiron mariné aux zests d’orange
-                        <span class="prix">
-                            89€
-                        </span>
-                    <br>Foie gras de canard cuit entier, confiture de figue et pain toasté
-                        <span class="prix">
-                            105€
-                        </span>
-                <h3>
-                    Point d’orgue
-                </h3>
-                    <br>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
-                        <span class="prix">
-                            102€
-                        </span>
-                    <br>Langoustine poêlée, purée de patate douce
-                        <span class="prix">
-                            205€
-                        </span>
-                    <br>Mijoté de queue de boeuf et riz sauvage aux zests de citron
-                        <span class="prix">
-                            169€
-                        </span>
-                <h3>
-                Mouvement final
-                </h3>
-                    <br>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
-                    <br>Baba au rhum revisité avec son coulis de citron
-                    <br>Tarte au citron meringuée destructurée
-                <h5>
-                    <i class="fas fa-music">
-                    </i>
-                    La note enchantée
-                </h5>
+                    <h3>
+                        Prélude
+                    </h3>
+                        <div class="plat">
+                                <p>
+                                    Ravioles de foie gras accompagnés de leur crème à la truffe
+                                    <span class="prix">
+                                        98€
+                                    </span>
+                                </p>
+                            <p>
+                                Caviar osciètre sur blini à la farine de blé noir
+                                    <span class="prix">
+                                        115€
+                                    </span>
+                            </p>
+                            <p>
+                                Homard et espuma de potiron mariné aux zests d’orange
+                                    <span class="prix">
+                                        89€
+                                    </span>
+                            </p>
+                            <p>
+                                Foie gras de canard cuit entier, confiture de figue et pain toasté
+                                    <span class="prix">
+                                        105€
+                                    </span>
+                            </p>
+                        </div>
+                    <h3>
+                        Point d’orgue
+                    </h3>
+                        <div class="plat">
+                            <p>
+                                Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
+                                    <span class="prix">
+                                        102€
+                                    </span>
+                            </p>
+                            <p>
+                            Langoustine poêlée, purée de patate douce
+                                    <span class="prix">
+                                        205€
+                                    </span>
+                            </p>
+                            <p>
+                                Mijoté de queue de boeuf et riz sauvage aux zests de citron
+                                    <span class="prix">
+                                        169€
+                                    </span>
+                            </p>
+                        </div>
+                    <h3>
+                        Mouvement final
+                    </h3>
+                        <div class="plat">
+                            <p>
+                                Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
+                            </p>
+                            <p>
+                                Baba au rhum revisité avec son coulis de citron
+                            </p>
+                            <p>
+                                Tarte au citron meringuée destructurée
+                            </p>
+                            <h5>
+                                <i class="fas fa-music">
+                                </i>
+                                La note enchantée
+                            </h5>
+                        </div>
                 </section>
             </div>    
         </main>
